--- a/ex1_DP/1.1_dynamic_programming.ipynb
+++ b/ex1_DP/1.1_dynamic_programming.ipynb
@@ -31,11 +31,11 @@
     "\n",
     "- **Continuous-time Dynamics**: Systems whose states evolve continuously over time, typically modeled by differential equations such as $\\dot{\\boldsymbol{x}}(t)=f_c(\\boldsymbol{x}(t),\\boldsymbol{u}(t))$, where $\\boldsymbol{x}(t)$ and $\\boldsymbol{u}(t)$ are the state and input at time $t$, respectively, and $f_c$ are the continuous-time system dynamics. The equations of motion derived from first principles or Newton's laws are continuous-time dynamic equations.  \n",
     "\n",
-    "- **Discrete-time Dynamics**: Systems whose states evolve at distinct time steps, typically modeled by difference equations such as $\\boldsymbol{x}_{k+1}=f(\\boldsymbol{x}_k,u_k)$, where $\\boldsymbol{x}_k$ and $\\boldsymbol{u}_k$ are the state and input at step $k$, respectively, and $f$ are the discrete-time system dynamics. Due to the discrete nature of computer systems, we need to implement controllers in a discrete-time fashion.  \n",
+    "- **Discrete-time Dynamics**: Systems whose states evolve at distinct time steps, typically modeled by difference equations such as $\\boldsymbol{x}_{k+1}=f(\\boldsymbol{x}_k,\\boldsymbol{u}_k)$, where $\\boldsymbol{x}_k$ and $\\boldsymbol{u}_k$ are the state and input at step $k$, respectively, and $f$ are the discrete-time system dynamics. Due to the discrete nature of computer systems, we need to implement controllers in a discrete-time fashion.  \n",
     "\n",
     "- **Linear Dynamics**: The future behavior of the system depends linearly on its current state and input, typically expressed as $\\dot{\\boldsymbol{x}}=\\boldsymbol{A}\\boldsymbol{x}+\\boldsymbol{B}\\boldsymbol{u}$, where $\\boldsymbol{A}$ is the system matrix and $\\boldsymbol{B}$ is the input matrix. Always used for simplified analysis or as a local approximation near equilibrium points. For example, the car moving along a flat ground or a slope with constant inclination angle.  \n",
     "\n",
-    "- **Nonlinear Dynamics**: The general case that captures the nonlinear evolution of the system dynamics, typically expressed as $\\dot{\\boldsymbol{x}}=f(\\boldsymbol{x},u)$. This especially includes gravitational effects and nonlinear terrain profiles, making the problem significantly harder to solve but also more realistic.  \n",
+    "- **Nonlinear Dynamics**: The general case that captures the nonlinear evolution of the system dynamics, typically expressed as $\\dot{\\boldsymbol{x}}=f(\\boldsymbol{x},\\boldsymbol{u})$. This especially includes gravitational effects and nonlinear terrain profiles, making the problem significantly harder to solve but also more realistic.  \n",
     "\n",
     "\n",
     "##### 3. **Type of State and Input**\n",
@@ -253,14 +253,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "739781d4-000a-4138-8363-b1f72f332893",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Calculate inclination angle theta(p) based on terrain profile h(p)\n",
-    "#  - argument: CasAdi symbolic expression `h_func`\n",
-    "#  - return: CasAdi symbolic expression `theta(p)`\n",
+    "#  - argument: CasADi symbolic expression `h_func`\n",
+    "#  - return: CasADi symbolic expression `theta(p)`\n",
     "\n",
     "def symbolic_theta(h_func):\n",
     "\n",
@@ -280,7 +280,7 @@
    "source": [
     "**Example 1.3: Environment Parameters and Control Task**\n",
     "\n",
-    "- Task: start from given initial position $p_0$, to reach a given target position $p_T$ (stabilization)\n",
+    "- Task: start from a given initial position $p_0$, to reach a given target position $p_T$ (stabilization)\n",
     "\n",
     "- You may use the pre-defined method `test_env()` to check the slope $h(p)$ and and the inclination angle $\\theta(p)$.\n",
     "\n"
@@ -370,7 +370,7 @@
     "\n",
     "To facilitate analysis and control design, the system dynamics can be expressed in a state-space representation:\n",
     "\n",
-    "   - state vector $\\boldsymbol{x} = [p, v]^T$\n",
+    "   - state vector $\\boldsymbol{x} = [p, v]^\\top$\n",
     "   - input vector $u$\n",
     "   - system dynamics:\n",
     "   $$\n",
@@ -654,8 +654,8 @@
     "\n",
     "$$\n",
     "J_k(\\boldsymbol{x}_k) = \\min_{\\boldsymbol{u}_{k|k}, \\ldots, \\boldsymbol{u}_{k+N-1|k}} \n",
-    "\\sum_{i=0}^{N-1} \\boldsymbol{u}_{k+i|k} ^T \\boldsymbol{R} u_{k+i|k}\n",
-    "+ \\left( \\boldsymbol{x}_{k+N|k} - \\boldsymbol{x}_T \\right)^T \\boldsymbol{Q}_f \\left( \\boldsymbol{x}_{k+N|k} - \\boldsymbol{x}_T \\right)\n",
+    "\\sum_{i=0}^{N-1} \\boldsymbol{u}_{k+i|k}^\\top \\boldsymbol{R} u_{k+i|k}\n",
+    "+ \\left( \\boldsymbol{x}_{k+N|k} - \\boldsymbol{x}_T \\right)^\\top \\boldsymbol{Q}_f \\left( \\boldsymbol{x}_{k+N|k} - \\boldsymbol{x}_T \\right)\n",
     "$$\n",
     "\n",
     "subject to:\n",
@@ -682,7 +682,7 @@
     "At the terminal step $ k = N $, the cost-to-go is initialized using the terminal cost function:\n",
     "\n",
     "$$\n",
-    "J_N(\\boldsymbol{x}_N) = (\\boldsymbol{x}_N - \\boldsymbol{x}_T)^T Q_f (\\boldsymbol{x}_N - \\boldsymbol{x}_T) \\,.\n",
+    "J_N(\\boldsymbol{x}_N) = (\\boldsymbol{x}_N - \\boldsymbol{x}_T)^\\top Q_f (\\boldsymbol{x}_N - \\boldsymbol{x}_T) \\,.\n",
     "$$\n",
     "\n",
     "Starting from this terminal cost, we perform a **backward recursion** from $ k = N-1 $ down to $ k = 0 $ to compute the **optimal control policy** $ \\mu_k(\\boldsymbol{x}_k) $ and the corresponding **cost-to-go function** $ J_k(\\boldsymbol{x}_k) $ at each step, based on the future cost $ J_{k+1}(\\boldsymbol{x}_{k+1}) $:\n",
@@ -733,7 +733,7 @@
     "\n",
     "3) **Initialize the recursive cost matrix with terminal costs**  \n",
     "\n",
-    "   The terminal cost is evaluated symbolically as $J_N(\\boldsymbol{x}_N) = (\\boldsymbol{x}_N - \\boldsymbol{x}_T)^T Q_f (\\boldsymbol{x}_N - \\boldsymbol{x}_T)$.\n",
+    "   The terminal cost is evaluated symbolically as $J_N(\\boldsymbol{x}_N) = (\\boldsymbol{x}_N - \\boldsymbol{x}_T)^\\top Q_f (\\boldsymbol{x}_N - \\boldsymbol{x}_T)$.\n",
     "\n",
     "4) **Backward recursion using Bellman's principle**  \n",
     "\n",
@@ -897,13 +897,13 @@
     "#### **Part 4: Implement the Dynamic Programming-based Controller with Bang-bang Input**\n",
     "\n",
     "\n",
-    "As introduced at the beginning, optimal control problems come in many variations. The control inputs can be either continuous or discrete, and the problems may involve constraints or be unconstrained. In this section, we extend our symbolic DP implementation to handle **discrete-valued control inputs**, also known as **bang-bang control**. Unlike the previous continuous-input case, where the optimal control input was computed by analytically minimizing the cost function using calculus (first-order optimality conditions), here we **explicitly enumerate** all possible control actions (in this case: $ u_k \\in \\{-0.5, 0.5\\} $) and choose the one with the **lowest resulting cost**. The differences compared with the previous continuous input DP are summarized as follows:\n",
+    "As introduced at the beginning, optimal control problems come in many variations. The control inputs can be either continuous or discrete, and the problems may involve constraints or be unconstrained. In this section, we extend our symbolic DP implementation to handle **discrete-valued control inputs**, also known as **bang-bang control**. Unlike the previous continuous-input case, where the optimal control input was computed by analytically minimizing the cost function using calculus (first-order optimality conditions), here we **explicitly enumerate** all possible control actions (in this case: $ \\boldsymbol{u}_k \\in \\{-0.5, 0.5\\} $) and choose the one with the **lowest resulting cost**. The differences compared with the previous continuous input DP are summarized as follows:\n",
     "\n",
     "| Feature | Continuous Input DP | Discrete (Bang-bang) DP |\n",
     "|--------|----------------------|--------------------------|\n",
-    "| Control set | Continuous (e.g., $ u \\in \\mathbb{R} $) | Discrete ($ u \\in \\{-0.5, 0.5\\} $) |\n",
+    "| Control set | Continuous (e.g., $ \\boldsymbol{u} \\in \\mathbb{R} $) | Discrete ($ \\boldsymbol{u} \\in \\{-0.5, 0.5\\} $) |\n",
     "| Optimal input | Solved symbolically via derivative $ \\frac{dJ}{du} = 0 $ | Evaluated explicitly for each candidate input |\n",
-    "| Policy format | Symbolic expression $ \\mu_k(x_k) $ | Symbolic piecewise function from enumeration |\n",
+    "| Policy format | Symbolic expression $ \\mu_k(\\boldsymbol{x}_k) $ | Symbolic piecewise function from enumeration |\n",
     "| Use case | Smooth unconstrained systems | Input-limited systems (e.g., switched systems) |\n"
    ]
   },
@@ -916,8 +916,8 @@
     "\n",
     "$$\n",
     "J_k(\\boldsymbol{x}_k) = \\min_{\\boldsymbol{u}_{k|k}, \\ldots, \\boldsymbol{u}_{k+N-1|k}} \n",
-    "\\sum_{i=0}^{N-1} \\boldsymbol{u}_{k+i|k} ^T \\boldsymbol{R} \\boldsymbol{u}_{k+i|k}\n",
-    "+ \\left( \\boldsymbol{x}_{k+N|k} - \\boldsymbol{x}_T \\right)^T \\boldsymbol{Q}_f \\left( \\boldsymbol{x}_{k+N|k} - \\boldsymbol{x}_T \\right)\n",
+    "\\sum_{i=0}^{N-1} \\boldsymbol{u}_{k+i|k}^\\top \\boldsymbol{R} \\boldsymbol{u}_{k+i|k}\n",
+    "+ \\left( \\boldsymbol{x}_{k+N|k} - \\boldsymbol{x}_T \\right)^\\top \\boldsymbol{Q}_f \\left( \\boldsymbol{x}_{k+N|k} - \\boldsymbol{x}_T \\right)\n",
     "$$\n",
     "\n",
     "subject to:\n",
@@ -942,7 +942,7 @@
    "source": [
     "**Problem Solving:**\n",
     "\n",
-    "The **main difference** in problem solving lies in the backward recursion step. Instead of analytically minimizing the total cost by solving first-order conditions (as in the continuous case), we now **explicitly evaluate the cost-to-go under each possible input value** from the discrete control set. In this bang-bang setting, the input $ u_k $ is constrained to the values $-0.5$ and $+0.5$.\n",
+    "The **main difference** in problem solving lies in the backward recursion step. Instead of analytically minimizing the total cost by solving first-order conditions (as in the continuous case), we now **explicitly evaluate the cost-to-go under each possible input value** from the discrete control set. In this bang-bang setting, the input $ \\boldsymbol{u}_k $ is constrained to the values $-0.5$ and $+0.5$.\n",
     "\n",
     "For each time step $ k $, we proceed as follows:\n",
     "\n",
