--- a/ex2_LQR/2.1_linear_quadratic_regulator.ipynb
+++ b/ex2_LQR/2.1_linear_quadratic_regulator.ipynb
@@ -100,7 +100,7 @@
     "   - case 4: varying slope for underactuated case (nonlinear case), $h(p) = \\begin{cases} k \\cdot \\sin(3 p), & p \\in [- \\frac{\\pi}{2}, \\frac{\\pi}{6}] \\\\ k, & p \\in (-\\infty, -\\frac{\\pi}{2}) \\cup (\\frac{\\pi}{6}, \\infty) \\end{cases}$\n",
     "\n",
     "- System dynamics of 1D mountain car model (in state space representation): \n",
-    "   - state vector $\\boldsymbol{x} = [p, v]^T$\n",
+    "   - state vector $\\boldsymbol{x} = [p, v]^\\top$\n",
     "   - input vector $u$\n",
     "   - system dynamics:\n",
     "   $$\n",
@@ -124,8 +124,8 @@
     "- Parameters in the task:  \n",
     "   - case: 1 (linear case)\n",
     "   \n",
-    "   - initial state: $\\boldsymbol{x}_0 = [-0.5, 0.0]^T$\n",
-    "   - target state: $\\boldsymbol{x}_T = [0.6, 0.0]^T$\n",
+    "   - initial state: $\\boldsymbol{x}_0 = [-0.5, 0.0]^\\top$\n",
+    "   - target state: $\\boldsymbol{x}_T = [0.6, 0.0]^\\top$\n",
     "\n",
     "**Step 2: Call function `test_env()` to plot the mountain profile $h(p)$ and curve of inclination angle $\\theta(p)$**\n",
     "\n",
@@ -189,7 +189,7 @@
     "the finite-horizon quadratic cost function is given by:\n",
     "\n",
     "$$\n",
-    "J(\\boldsymbol{x}_0) = \\boldsymbol{x}_N^T \\boldsymbol{Q}_N \\boldsymbol{x}_N + \\sum_{k=0}^{N-1} \\left(\\boldsymbol{x}_k^T \\boldsymbol{Q}_k \\boldsymbol{x}_k + \\boldsymbol{u}_k^T \\boldsymbol{R}_k \\boldsymbol{u}_k\\right) \\,.\n",
+    "J(\\boldsymbol{x}_0) = \\boldsymbol{x}_N^\\top \\boldsymbol{Q}_N \\boldsymbol{x}_N + \\sum_{k=0}^{N-1} \\left(\\boldsymbol{x}_k^\\top \\boldsymbol{Q}_k \\boldsymbol{x}_k + \\boldsymbol{u}_k^\\top \\boldsymbol{R}_k \\boldsymbol{u}_k\\right) \\,.\n",
     "$$\n",
     "\n",
     "*Note that in this formulation, the weighting matrices $\\boldsymbol{Q}_k$ and $\\boldsymbol{R}_k$ are defined as time-varying. This is intended to maintain generality in the problem setup.\n",
@@ -208,7 +208,7 @@
     "We start with the value function at time $N$\n",
     "\n",
     "$$\n",
-    "V_N(\\boldsymbol{x}_N) = \\boldsymbol{x}_N^T \\boldsymbol{Q}_N \\boldsymbol{x}_N \\,,\n",
+    "V_N(\\boldsymbol{x}_N) = \\boldsymbol{x}_N^\\top \\boldsymbol{Q}_N \\boldsymbol{x}_N \\,,\n",
     "$$\n",
     "\n",
     "with terminal condition\n",
@@ -222,8 +222,8 @@
     "$$\n",
     "\\begin{aligned}\n",
     "V_k(\\boldsymbol{x}_k) \n",
-    "&= \\min_{\\boldsymbol{u}_k} \\left[ \\boldsymbol{x}_k^T \\boldsymbol{Q}_k \\boldsymbol{x}_k + \\boldsymbol{u}_k^T \\boldsymbol{R}_k \\boldsymbol{u}_k + V_{k+1}(\\boldsymbol{x}_{k+1}) \\right] \\\\\n",
-    "&= \\min_{\\boldsymbol{u}_k} \\left[ \\boldsymbol{x}_k^T \\boldsymbol{Q}_k \\boldsymbol{x}_k + \\boldsymbol{u}_k^T \\boldsymbol{R}_k \\boldsymbol{u}_k + (\\boldsymbol{A} \\boldsymbol{x}_k + \\boldsymbol{B} \\boldsymbol{u}_k)^T \\boldsymbol{S}_{k+1} (\\boldsymbol{A} \\boldsymbol{x}_k + \\boldsymbol{B} \\boldsymbol{u}_k) \\right] \\,.\n",
+    "&= \\min_{\\boldsymbol{u}_k} \\left[ \\boldsymbol{x}_k^\\top \\boldsymbol{Q}_k \\boldsymbol{x}_k + \\boldsymbol{u}_k^\\top \\boldsymbol{R}_k \\boldsymbol{u}_k + V_{k+1}(\\boldsymbol{x}_{k+1}) \\right] \\\\\n",
+    "&= \\min_{\\boldsymbol{u}_k} \\left[ \\boldsymbol{x}_k^\\top \\boldsymbol{Q}_k \\boldsymbol{x}_k + \\boldsymbol{u}_k^\\top \\boldsymbol{R}_k \\boldsymbol{u}_k + (\\boldsymbol{A} \\boldsymbol{x}_k + \\boldsymbol{B} \\boldsymbol{u}_k)^\\top \\boldsymbol{S}_{k+1} (\\boldsymbol{A} \\boldsymbol{x}_k + \\boldsymbol{B} \\boldsymbol{u}_k) \\right] \\,.\n",
     "\\end{aligned}\n",
     "$$\n",
     "\n",
@@ -236,13 +236,13 @@
     "with the time-varying gain matrix \n",
     "\n",
     "$$\n",
-    "\\boldsymbol{K}_k = -(\\boldsymbol{R}_k + \\boldsymbol{B}^T \\boldsymbol{S}_{k+1} \\boldsymbol{B})^{-1} \\boldsymbol{B}^T \\boldsymbol{S}_{k+1} \\boldsymbol{A} \\,.\n",
+    "\\boldsymbol{K}_k = -(\\boldsymbol{R}_k + \\boldsymbol{B}^\\top \\boldsymbol{S}_{k+1} \\boldsymbol{B})^{-1} \\boldsymbol{B}^\\top \\boldsymbol{S}_{k+1} \\boldsymbol{A} \\,.\n",
     "$$\n",
     "\n",
     "The Riccati matrix update is given by:\n",
     "\n",
     "$$\n",
-    "\\boldsymbol{S}_k = \\boldsymbol{Q}_k + \\boldsymbol{A}^T \\boldsymbol{S}_{k+1} \\boldsymbol{A} - \\boldsymbol{A}^T \\boldsymbol{S}_{k+1} \\boldsymbol{B} (\\boldsymbol{R}_k + \\boldsymbol{B}^T \\boldsymbol{S}_{k+1} \\boldsymbol{B})^{-1} \\boldsymbol{B}^T \\boldsymbol{S}_{k+1} \\boldsymbol{A} \\,.\n",
+    "\\boldsymbol{S}_k = \\boldsymbol{Q}_k + \\boldsymbol{A}^\\top \\boldsymbol{S}_{k+1} \\boldsymbol{A} - \\boldsymbol{A}^\\top \\boldsymbol{S}_{k+1} \\boldsymbol{B} (\\boldsymbol{R}_k + \\boldsymbol{B}^\\top \\boldsymbol{S}_{k+1} \\boldsymbol{B})^{-1} \\boldsymbol{B}^\\top \\boldsymbol{S}_{k+1} \\boldsymbol{A} \\,.\n",
     "$$\n"
    ]
   },
@@ -391,7 +391,7 @@
     "as the horizon length $N$ approaches infinity, the problem converges to the infinite-horizon formulation with a time-invariant optimal policy. The infinite-horizon quadratic cost function is then given by:\n",
     "\n",
     "$$\n",
-    "J(\\boldsymbol{x}_0) = \\sum_{k=0}^{\\infty} \\left(\\boldsymbol{x}_k^T \\boldsymbol{Q} \\boldsymbol{x}_k + \\boldsymbol{u}_k^T \\boldsymbol{R} \\boldsymbol{u}_k\\right) \\,.\n",
+    "J(\\boldsymbol{x}_0) = \\sum_{k=0}^{\\infty} \\left(\\boldsymbol{x}_k^\\top \\boldsymbol{Q} \\boldsymbol{x}_k + \\boldsymbol{u}_k^\\top \\boldsymbol{R} \\boldsymbol{u}_k\\right) \\,.\n",
     "$$"
    ]
   },
@@ -405,13 +405,13 @@
     "The solution to this problem is obtained by solving the **discrete algebraic Riccati equation (DARE):**\n",
     "\n",
     "$$\n",
-    "\\boldsymbol{S} = \\boldsymbol{Q} + \\boldsymbol{A}^T \\boldsymbol{S} \\boldsymbol{A} - \\boldsymbol{A}^T \\boldsymbol{S} \\boldsymbol{B}(\\boldsymbol{R} + \\boldsymbol{B}^T \\boldsymbol{S} \\boldsymbol{B})^{-1} \\boldsymbol{B}^T \\boldsymbol{S} \\boldsymbol{A} \\,.\n",
+    "\\boldsymbol{S} = \\boldsymbol{Q} + \\boldsymbol{A}^\\top \\boldsymbol{S} \\boldsymbol{A} - \\boldsymbol{A}^\\top \\boldsymbol{S} \\boldsymbol{B}(\\boldsymbol{R} + \\boldsymbol{B}^\\top \\boldsymbol{S} \\boldsymbol{B})^{-1} \\boldsymbol{B}^\\top \\boldsymbol{S} \\boldsymbol{A} \\,.\n",
     "$$\n",
     "\n",
     "The optimal feedback control policy is given by:\n",
     "\n",
     "$$\n",
-    "\\boldsymbol{u}^*_k = \\boldsymbol{K} \\boldsymbol{x}_k, \\quad \\boldsymbol{K} = -\\left( \\boldsymbol{R} + \\boldsymbol{B}^T \\boldsymbol{S} \\boldsymbol{B} \\right)^{-1} \\boldsymbol{B}^T \\boldsymbol{S} \\boldsymbol{A} \\,.\n",
+    "\\boldsymbol{u}^*_k = \\boldsymbol{K} \\boldsymbol{x}_k, \\quad \\boldsymbol{K} = -\\left( \\boldsymbol{R} + \\boldsymbol{B}^\\top \\boldsymbol{S} \\boldsymbol{B} \\right)^{-1} \\boldsymbol{B}^\\top \\boldsymbol{S} \\boldsymbol{A} \\,.\n",
     "$$"
    ]
   },
@@ -675,7 +675,7 @@
     "Considering that the valley itself is an attractive equilibrium point, the terminal condition is easily satisfied, and thus the linearization point can be directly chosen at the flat ground:\n",
     "\n",
     "$$\n",
-    "\\boldsymbol{\\overline{x}} = [1.0, 0.0]^T \\,.\n",
+    "\\boldsymbol{\\overline{x}} = [1.0, 0.0]^\\top \\,.\n",
     "$$\n",
     "\n",
     "Run the following simulation and observe the results.\n"
@@ -723,7 +723,7 @@
     "Let us slightly increase the difficulty of the task: while still choosing the flat ground as the linearization point, we attempt to use the LQR control law to drive the car from the bottom of the valley toward the right hilltop. The parameters can be set according to the following values:\n",
     "\n",
     "$$\n",
-    "p_{\\text{start}} = -0.5, \\quad p_{\\text{target}} = 0.6, \\quad \\boldsymbol{\\overline{x}} = [1.0, 0.0]^T \\,.\n",
+    "p_{\\text{start}} = -0.5, \\quad p_{\\text{target}} = 0.6, \\quad \\boldsymbol{\\overline{x}} = [1.0, 0.0]^\\top \\,.\n",
     "$$\n",
     "\n",
     "Run the following simulation and see what will happen."
@@ -771,7 +771,7 @@
     "Based on the simulation results of Case 2, we attempt to make some adjustments to the linearization point to observe how it affects the system's response. We move the linearization point to a point on the slope, which implies that:\n",
     "\n",
     "$$\n",
-    "p_{\\text{start}} = -0.5, \\quad p_{\\text{target}} = 0.6, \\quad \\boldsymbol{\\overline{x}} = [0.0, 0.0]^T \\,.\n",
+    "p_{\\text{start}} = -0.5, \\quad p_{\\text{target}} = 0.6, \\quad \\boldsymbol{\\overline{x}} = [0.0, 0.0]^\\top \\,.\n",
     "$$\n",
     "\n",
     "Rerun the simulation and observe the results."
