--- a/ex6_SysID/6.2_Learning_Based_MPC.ipynb
+++ b/ex6_SysID/6.2_Learning_Based_MPC.ipynb
@@ -111,9 +111,9 @@
     "\n",
     "- Parameters of task:  \n",
     "\n",
-    "   - initial state: $\\boldsymbol{x}_0 = [-0.5, 0.0]^T$\n",
+    "   - initial state: $\\boldsymbol{x}_0 = [-0.5, 0.0]^\\top$\n",
     "\n",
-    "   - target state: $\\boldsymbol{x}_T = [0.5, 0.0]^T$\n",
+    "   - target state: $\\boldsymbol{x}_T = [0.5, 0.0]^\\top$\n",
     "\n",
     "   - State constraints: $ \\quad p \\in [-2.0, 2.0], \\quad v \\in [-4.0, 4.0],$  \n",
     "\n",
