--- a/ex7_RL/7.1_mbrl.ipynb
+++ b/ex7_RL/7.1_mbrl.ipynb
@@ -115,7 +115,7 @@
     "   - case 4: varying slope for under actuated case (nonlinear case), $h(p) = \\begin{cases} k \\cdot \\sin(3 p), & p \\in [- \\frac{\\pi}{2}, \\frac{\\pi}{6}] \\\\ k, & p \\in (-\\infty, -\\frac{\\pi}{2}) \\cup (\\frac{\\pi}{6}, \\infty) \\end{cases}$\n",
     "\n",
     "- System dynamics of 1d mountain car model (in state space representation): \n",
-    "   - state vector $\\boldsymbol{x} = [p, v]^T$\n",
+    "   - state vector $\\boldsymbol{x} = [p, v]^\\top$\n",
     "   - input vector $u$\n",
     "   - system dynamics:\n",
     "   $$\n",
@@ -135,9 +135,9 @@
     "\n",
     "   - case: 1 (linear case)\n",
     "   \n",
-    "   - initial state: $\\boldsymbol{x}_0 = [-0.5, 0.0]^T$\n",
+    "   - initial state: $\\boldsymbol{x}_0 = [-0.5, 0.0]^\\top$\n",
     "\n",
-    "   - target state: $\\boldsymbol{x}_T = [0.6, 0.0]^T$\n",
+    "   - target state: $\\boldsymbol{x}_T = [0.6, 0.0]^\\top$\n",
     "\n",
     "   - input constraints: $ \\mathcal{U} \\in [-5.0, 5.0]$\n"
    ]
