--- a/ex7_RL/7.2_mfrl.ipynb
+++ b/ex7_RL/7.2_mfrl.ipynb
@@ -119,7 +119,7 @@
     "   - case 4: varying slope for under actuated case (nonlinear case), $h(p) = \\begin{cases} k \\cdot \\sin(3 p), & p \\in [- \\frac{\\pi}{2}, \\frac{\\pi}{6}] \\\\ k, & p \\in (-\\infty, -\\frac{\\pi}{2}) \\cup (\\frac{\\pi}{6}, \\infty) \\end{cases}$\n",
     "\n",
     "- System dynamics of 1d mountain car model (in state space representation): \n",
-    "   - state vector $\\boldsymbol{x} = [p, v]^T$\n",
+    "   - state vector $\\boldsymbol{x} = [p, v]^\\top$\n",
     "   - input vector $u$\n",
     "   - system dynamics:\n",
     "   $$\n",
@@ -140,9 +140,9 @@
     "\n",
     "   - case: 1 (flat terrain) / 4 (hilly terrain)\n",
     "   \n",
-    "   - initial state: $\\boldsymbol{x}_0 = [-0.5, 0.0]^T$\n",
+    "   - initial state: $\\boldsymbol{x}_0 = [-0.5, 0.0]^\\top$\n",
     "\n",
-    "   - target state: $\\boldsymbol{x}_T = [0.6, 0.0]^T$\n",
+    "   - target state: $\\boldsymbol{x}_T = [0.6, 0.0]^\\top$\n",
     "\n",
     "   - state constraints (discretization space in RL): $ \\mathcal{X}_1 = [-1.7, 1.3]$,  $ \\mathcal{X}_2 = [-3.5, 3.5]$\n",
     "\n",
