--- a/ex3_OPT/3.1_optimization_fundamentals.ipynb
+++ b/ex3_OPT/3.1_optimization_fundamentals.ipynb
@@ -151,19 +151,19 @@
     "1) **Quadratic Function:** A simple convex function used as a basic test case for optimization algorithms: \n",
     "\n",
     "$$\n",
-    "f(\\boldsymbol{x}) = \\frac{1}{8}x_0^2 + \\frac{1}{2} x_1^2, \\quad \\boldsymbol{x}^* = [0, 0]^T \\,.\n",
+    "f(\\boldsymbol{x}) = \\frac{1}{8}x_0^2 + \\frac{1}{2} x_1^2, \\quad \\boldsymbol{x}^* = [0, 0]^\\top \\,.\n",
     "$$\n",
     "\n",
     "2) **Rosenbrock Function:** A non-convex function used to test the performance of optimization algorithms, characterized by a narrow, curved valley leading to the global minimum:\n",
     "\n",
     "$$\n",
-    "f(\\boldsymbol{x}) = (1 - x_0)^2 + 100 (x_1 - x_0^2)^2, \\quad \\boldsymbol{x}^* = [1, 1]^T \\,.\n",
+    "f(\\boldsymbol{x}) = (1 - x_0)^2 + 100 (x_1 - x_0^2)^2, \\quad \\boldsymbol{x}^* = [1, 1]^\\top \\,.\n",
     "$$\n",
     "\n",
     "3) **Rastrigin Function:** A highly multimodal function used to test the ability of algorithms to escape local minima, combining a quadratic term with a cosine modulation:\n",
     "\n",
     "$$\n",
-    "f(\\boldsymbol{x}) = 20 + \\left( x_0^2 - 10 \\cos(2\\pi x_0) \\right) + \\left( x_1^2 - 10 \\cos(2\\pi x_1) \\right), \\quad \\boldsymbol{x}^* = [0, 0]^T \\,.\n",
+    "f(\\boldsymbol{x}) = 20 + \\left( x_0^2 - 10 \\cos(2\\pi x_0) \\right) + \\left( x_1^2 - 10 \\cos(2\\pi x_1) \\right), \\quad \\boldsymbol{x}^* = [0, 0]^\\top \\,.\n",
     "$$\n"
    ]
   },
@@ -307,7 +307,7 @@
     "Line search is a subroutine in optimization algorithms that determines an appropriate step size along a given search direction. The goal is to ensure sufficient decrease in the objective function while avoiding overly small steps. One of the most common and simple methods is **backtracking line search**. It starts with a relatively large initial step size and repeatedly reduces it until a sufficient decrease condition (typically the **Armijo condition**) is satisfied. The pseudocode of the algorithm is shown below:\n",
     "\n",
     " - Start with an initial step size $\\alpha = \\alpha_0$ (typically $\\alpha_0 \\in \\left(0,1\\right)$).\n",
-    " - Check whether the **Armijo condition** holds: $f(\\boldsymbol{x}^l + \\alpha p^l) \\leq f(\\boldsymbol{x}^l) + c \\alpha \\nabla f(\\boldsymbol{x}^l)^T p^l$, where $c \\in (0,1)$ is a small constant (e.g., $10^{-4}$).\n",
+    " - Check whether the **Armijo condition** holds: $f(\\boldsymbol{x}^l + \\alpha p^l) \\leq f(\\boldsymbol{x}^l) + c \\alpha \\nabla f(\\boldsymbol{x}^l)^\\top p^l$, where $c \\in (0,1)$ is a small constant (e.g., $10^{-4}$).\n",
     " - If the condition is not satisfied, shrink the step size by a factor $\\beta \\in (0,1)$ (e.g., $\\beta = 0.5$), that is, update $\\alpha \\leftarrow \\beta \\alpha$, and repeat the check.\n",
     " - Continue until the Armijo condition is satisfied.\n",
     "\n",
@@ -541,7 +541,7 @@
    "source": [
     "##### **Example 1.3: Using Implemented Solver to Optimize the Rosenbrock Function**\n",
     "\n",
-    "Now let us consider a more challenging scenario by choosing the Rosenbrock function as the objective. Its global minimum lies at $[1.0,1.0]^T$, but the function is notoriously difficult to optimize due to its narrow, curved valley and steep walls, which can easily mislead simple gradient-based methods. We will attempt to optimize it using GD and observe the resulting behavior.\n",
+    "Now let us consider a more challenging scenario by choosing the Rosenbrock function as the objective. Its global minimum lies at $[1.0,1.0]^\\top$, but the function is notoriously difficult to optimize due to its narrow, curved valley and steep walls, which can easily mislead simple gradient-based methods. We will attempt to optimize it using GD and observe the resulting behavior.\n",
     "\n",
     "1\\) Instantiate the unconstrained solver class `UnconstrOptimizer`;\n",
     "\n",
@@ -681,7 +681,7 @@
    "source": [
     "**Conclusion:**\n",
     "\n",
-    "This figure shows the optimization trajectory of Newton's method applied to the Rosenbrock function. Unlike gradient descent, Newton’s method successfully converges to the global optimum at $[1.0,1.0]^T$ in fewer than 50 iterations, demonstrating significantly higher efficiency. The trajectory closely follows the curved valley, highlighting **Newton's method's ability to incorporate second-order curvature information for better step directions**, especially in narrow and ill-conditioned landscapes. This result underscores the strength of Newton’s method in adapting to the local geometry of complex objective functions.\n",
+    "This figure shows the optimization trajectory of Newton's method applied to the Rosenbrock function. Unlike gradient descent, Newton’s method successfully converges to the global optimum at $[1.0,1.0]^\\top$ in fewer than 50 iterations, demonstrating significantly higher efficiency. The trajectory closely follows the curved valley, highlighting **Newton's method's ability to incorporate second-order curvature information for better step directions**, especially in narrow and ill-conditioned landscapes. This result underscores the strength of Newton’s method in adapting to the local geometry of complex objective functions.\n",
     "\n",
     "However, Newton's method also has notable drawbacks when comparing with GD: **it requires computing and inverting the Hessian matrix, which can be computationally expensive and numerically unstable**, especially in high-dimensional problems. Therefore, in practical applications, the choice of direction search algorithm should be guided by the structure and properties of the specific objective function.\n",
     "\n",
@@ -1259,7 +1259,7 @@
     "\n",
     "- Inequality constraint: $\\quad [1 \\quad -1 \\quad 0] \\cdot \\begin{bmatrix} x_0\\\\ x_1\\\\ 1 \\end{bmatrix} \\leq 0$  \n",
     "\n",
-    "3\\) Set the initial guess as $[0 \\quad 1]^T$ and call function `solve()` to solve the QP problem;\n",
+    "3\\) Set the initial guess as $[0 \\quad 1]^\\top$ and call function `solve()` to solve the QP problem;\n",
     "\n",
     "4\\) Call function `plot_results()` to visualize the results;\n"
    ]
