--- a/ex8_DRL/8.1_drl.ipynb
+++ b/ex8_DRL/8.1_drl.ipynb
@@ -43,9 +43,9 @@
     "\n",
     "   - case: 4 (hilly terrain)\n",
     "   \n",
-    "   - initial state: $\\boldsymbol{x}_0 = [-0.5, 0.0]^T$\n",
+    "   - initial state: $\\boldsymbol{x}_0 = [-0.5, 0.0]^\\top$\n",
     "\n",
-    "   - target state: $\\boldsymbol{x}_T = [0.6, 0.0]^T$\n",
+    "   - target state: $\\boldsymbol{x}_T = [0.6, 0.0]^\\top$\n",
     "\n",
     "   - state space: $ \\mathcal{X}_1 = [-1.7, 1.3]$,  $ \\mathcal{X}_2 = [-3.5, 3.5]$\n",
     "\n",
