--- a/ex5_MPC/5.2_model_predictive_control_part2.ipynb
+++ b/ex5_MPC/5.2_model_predictive_control_part2.ipynb
@@ -268,7 +268,7 @@
     "\n",
     "    i) weight for state $\\bm{Q} = \\text{diag}([1, 1])$ (requirement: symmetric, positive semi-definite matrix)  \n",
     "\n",
-    "    ii) weight for input $\\bm{R} = [0.1]$ (requirement: symmetric, positive definite matrix)  \n",
+    "    ii) weight for input $\\bm{R} = 0.1$ (requirement: symmetric, positive definite matrix)  \n",
     "    \n",
     "    iii) control frequency $f = 20$\n",
     "\n",
@@ -475,7 +475,7 @@
     "    color: inherit !important;                  \n",
     "\">\n",
     "\n",
-    "##### **Take-away 1: Key Insight on the Role of Terminal Cost $g_N(\\boldsymbol{x}_{k+N|k})$ in MPC**\n",
+    "##### **Takeaway 1: Key Insight on the Role of Terminal Cost $g_N(\\boldsymbol{x}_{k+N|k})$ in MPC**\n",
     "\n",
     "**Adding a terminal cost can be understood as a structured way of extending the prediction horizon without increasing the number of optimization variables**. While increasing the horizon allows the controller to explicitly consider longer-term consequences, introducing a terminal cost implicitly achieves a similar effect by assigning a cost-to-go approximation to the terminal state. In other words, $g_N(\\boldsymbol{x}_{k+N|k})$ serves as a surrogate for the cost that would be accumulated beyond the finite horizon.  \n",
     "\n",
@@ -508,7 +508,7 @@
     "    color: inherit !important;                  \n",
     "\">\n",
     "\n",
-    "##### **Take-away 2: Principles for Tuning MPC in Stabilization Tasks**\n",
+    "##### **Takeaway 2: Principles for Tuning MPC in Stabilization Tasks**\n",
     "\n",
     "If you aim to improve the performance of your MPC in a stabilization task, consider the following principles:\n",
     "\n",
@@ -621,7 +621,7 @@
     "    color: inherit !important;                  \n",
     "\">\n",
     "\n",
-    "##### **Take-away 3: Tuning MPC in Tracking Tasks**\n",
+    "##### **Takeaway 3: Tuning MPC in Tracking Tasks**\n",
     "\n",
     "**When tuning a tracking MPC for a feasible reference trajectory, the impact of hyperparameter choices tends to be significantly smaller than in stabilization tasks.** This is because the reference trajectory plays a dominant role in guiding the state evolution during optimization, thereby diminishing the influence of cost weights, horizon length, and terminal cost design.\n",
     "\n",
@@ -1238,7 +1238,7 @@
     "\n",
     "   - disturbance bounds: $ \\mathcal{D}_1 = [-0.4, 0.4]$, $ \\mathcal{D}_2 = [-0.8, 0.8]$\n",
     "\n",
-    "   - weight in cost: $\\bm{Q} = \\text{diag}([1, 1])$, $\\bm{R} = [0.1]$\n",
+    "   - weight in cost: $\\bm{Q} = \\text{diag}([1, 1])$, $\\bm{R} = 0.1$\n",
     "\n",
     "   - horizon $N = 30$\n",
     "\n",
