--- a/ex7_RL/7.0_ssp.ipynb
+++ b/ex7_RL/7.0_ssp.ipynb
@@ -7,16 +7,16 @@
    "source": [
     "### **Overview: The Stochastic Shortest Path Problem**\n",
     "\n",
-    "This notebook addresses the **Stochastic Shortest Path (SSP)** problem over a finite-state Markov decision process, where the goal is to compute an optimal policy $ \\pi^\\star $ minimizing the expected number of transitions from each initial state to a designated terminal state.\n",
+    "This notebook addresses the **stochastic shortest path (SSP)** problem over a finite-state Markov decision process, where the goal is to compute an optimal policy $ \\pi^\\star $ minimizing the expected number of transitions from each initial state to a designated terminal state.\n",
     "\n",
-    "We consider a finite set of nodes $ \\mathcal{X} = \\{1, 2, \\dots, n, t\\} $, where $ t $ is the absorbing (termination) state. The system is controlled by inputs $ u \\in \\mathcal{U} = \\{1, \\dots, m\\} $, and transitions occur according to a set of stochastic matrices $ P(u) \\in \\mathbb{R}^{(n+1) \\times (n+1)} $, with each row summing to 1.\n",
+    "We consider a finite set of nodes $ \\mathcal{X} = \\{1, 2, \\dots, n, t\\} $, where $ t $ is the absorbing (terminal) state. The system is controlled by inputs $ u \\in \\mathcal{U} = \\{1, \\dots, m\\} $, and transitions occur according to a set of stochastic matrices $ P(u) \\in \\mathbb{R}^{(n+1) \\times (n+1)} $, with each row summing to 1.\n",
     "\n",
     "In this notebook, we will:\n",
     "1. Generate random SSP problem data.\n",
     "2. Solve the SSP problem using three methods:\n",
-    "   - Policy Iteration\n",
-    "   - Value Iteration\n",
-    "   - Linear Programming\n",
+    "   - Policy iteration\n",
+    "   - Value iteration\n",
+    "   - Linear irogramming.\n",
     "3. Simulate the SSP process and validate the optimal policy.\n",
     "\n"
    ]
@@ -30,9 +30,9 @@
     "\n",
     "#### **Step 0: Import Libraries and Set Seed**\n",
     "\n",
-    "We begin by importing the required Python libraries for numerical computation, optimization, and visualization.\n",
+    "We import the required Python libraries for numerical computation, optimization, and visualization.\n",
     "\n",
-    "To ensure reproducibility of all random results (e.g., transition matrices, simulations), we also fix the random seed.\n"
+    "To ensure reproducibility of all random outputs (e.g., transition matrices, simulations), we also fix the random seed.\n"
    ]
   },
   {
@@ -74,9 +74,9 @@
     "\n",
     "#### **Step 1: Generate Random SSP Problem**\n",
     "\n",
-    "We begin by generating random problem data $ P(i, j, u) $, which encodes the probability of transitioning from state $ i $ to state $ j $ under action $ u $. The terminal state is absorbing, meaning once it is reached, no further transitions occur.\n",
+    "We generate random problem data $ P(i, j, u) $, which encodes the probability of transitioning from state $ i $ to state $ j $ under action $ u $. The terminal state is absorbing, meaning, once it is reached, no further transitions occur.\n",
     "\n",
-    "The structure of the probabilities ensures that transitions to nearby states are more likely than to distant ones."
+    "The structure of the probabilities ensure that transitions to nearby states are more likely than to distant ones."
    ]
   },
   {
@@ -103,7 +103,7 @@
     "\n",
     "#### **Step 2: Visualize Transition Matrix**\n",
     "\n",
-    "To better understand the structure of our SSP problem, we visualize the transition probability matrix $ P(u) $ for a selected control input $ u $.\n"
+    "To better understand the structure of our SSP problem, we visualize the transition probability matrix $ P(u) $ for a selected control input $u$.\n"
    ]
   },
   {
@@ -148,9 +148,9 @@
     "\n",
     "#### **Step 3: Solve using Policy Iteration**\n",
     "\n",
-    "We now solve the SSP problem using the **Policy Iteration** method. This algorithm iteratively evaluates and improves the policy $ \\pi $ until convergence to the optimal policy $ \\pi^\\star $.\n",
+    "We now solve the SSP problem using the **policy iteration** method. This algorithm iteratively evaluates and improves the policy $ \\pi $ until convergence to the optimal policy $ \\pi^\\star $.\n",
     "\n",
-    "The cost function being minimized is the expected number of transitions until absorption.\n"
+    "The cost function penalizes the expected number of transitions until absorption.\n"
    ]
   },
   {
@@ -193,7 +193,7 @@
     "\n",
     "#### **Step 4: Solve using Value Iteration**\n",
     "\n",
-    "As an alternative to policy iteration, we solve the SSP problem using **Value Iteration**. This method iteratively updates the value function $ J $ until convergence. The result from Policy Iteration can be used to set a meaningful stopping criterion (tolerance $ \\epsilon $).\n"
+    "As an alternative to policy iteration, we solve the SSP problem using **value iteration**. This method iteratively updates the value function $ J $ until convergence. The optimal value from policy iteration provides a meaningful reference for setting the convergence tolerance $\\epsilon$.\n"
    ]
   },
   {
@@ -240,7 +240,7 @@
     "\n",
     "#### **Step 5: Solve using Linear Programming**\n",
     "\n",
-    "We formulate the SSP problem as a **Linear Program (LP)** to solve for the optimal cost-to-go $ J^\\star $. The policy $ \\pi^\\star $ is then recovered by selecting the action that minimizes the expected cost at each state.\n"
+    "We formulate the SSP problem as a **Linear Program (LP)** to solve for the optimal cost-to-go $ J^\\star $. The policy $ \\pi^\\star $ is then recovered by selecting the action that minimizes the expected cost at each state given the value function.\n"
    ]
   },
   {
@@ -288,13 +288,13 @@
     "#### **Step 6: Compare Cost-to-Go Estimates from All Methods**\n",
     "\n",
     "We now compare the **optimal cost-to-go functions** $ J^\\star $ obtained using:\n",
-    "- Policy Iteration\n",
-    "- Value Iteration\n",
-    "- Linear Programming\n",
+    "- Policy iteration\n",
+    "- Value iteration\n",
+    "- Linear programming.\n",
     "\n",
     "For each state $ i \\in \\mathcal{X} \\setminus \\{t\\} $, we plot the expected number of transitions required to reach the terminal state under the respective optimal policy $ \\pi^\\star $.\n",
     "\n",
-    "This visualization confirms that all three methods yield consistent optimal costs.\n",
+    "This visualization confirms that all three methods yield comparable optimal costs.\n",
     "\n"
    ]
   },
@@ -334,9 +334,9 @@
     "\n",
     "#### **Step 7: Visualize Optimal Policy from Policy Iteration**\n",
     "\n",
-    "Here we visualize the **optimal control action** $ \\pi^\\star(i) $ at each state $ i \\in \\mathcal{X} \\setminus \\{t\\} $, as computed by the Policy Iteration method.\n",
+    "Here we visualize the **optimal control action** $ \\pi^\\star(i) $ at each state $ i \\in \\mathcal{X} \\setminus \\{t\\} $, as computed by the policy iteration method.\n",
     "\n",
-    "Each bar indicates which control input is selected by the optimal policy $ \\pi^\\star $ at the corresponding state.\n"
+    "Each bar indicates the control input selected by the optimal policy $ \\pi^\\star $ at the corresponding state.\n"
    ]
   },
   {
@@ -370,7 +370,7 @@
     "\n",
     "To validate the computed policy $ \\pi^\\star $, we simulate the SSP process multiple times starting from a fixed node $ i_0 \\in \\mathcal{X} $.\n",
     "\n",
-    "We compute the empirical mean and standard deviation of the total cost (i.e., number of steps until termination), and compare them with the theoretical values obtained from the three solution methods.\n"
+    "We compute the empirical mean and standard deviation of the number of steps until termination, and compare them with the theoretical values obtained from the three solution methods.\n"
    ]
   },
   {
