--- a/ex8_DRL/8.1_drl.ipynb
+++ b/ex8_DRL/8.1_drl.ipynb
@@ -292,7 +292,7 @@
     "# Instantiate the visualizer, and display the plots and animation\n",
     "visualizer_ppo = Visualizer(simulator_ppo)\n",
     "visualizer_ppo.display_contrast_plots(simulator_mpc, title=\"Simulation of PPO Controller on Hilly Terrain\", if_gray=True)\n",
-    "visualizer_ppo.display_contrast_animation(simulator_mpc, if_gray=True, if_save=True)"
+    "visualizer_ppo.display_contrast_animation(simulator_mpc, if_gray=True)"
    ]
   },
   {
@@ -383,7 +383,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
